h1 ni rangini o'zgartirdim

--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
         </header>
     </div>
     <main>
-        <div class="main-content">
+        <div class="cla">
             <div class="main-el">
                 <h1>Dive<span>Into The Depths Of</span>Virtual Reality</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
