--- a/html/index.html
+++ b/html/index.html
@@ -116,6 +116,7 @@
                     nunc. Viverra aliquet  porttitor rhoncus 
                     libero justo laoreet sit amet vitae.</p>
                 <button class="btn">TRY IT NOW</button>
+                <button class="btn">closs</button>
             </div>
         </div>
     </div>
